--- a/slides/02-StatBase/0-Descrittiva.qmd
+++ b/slides/02-StatBase/0-Descrittiva.qmd
@@ -1,5 +1,5 @@
 ---
-title: "Elementi di statistica descrittiva 0"
+title: "Frequenze e Indici di Tendenza Centrale"
 subtitle: "Test per le organizzaioni"
 author: Ottavia M. Epifania, Margherita Calderan
 date: ""
